--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -6,6 +6,7 @@
 </meta>
 
     <title>BYU</title>
+    <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
     <header>
@@ -25,6 +26,5 @@
     <footer>
         Footer Content
     </footer>
-
 </body>
 </html>
