--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-        Header Content
+        <h1> 
+            Header Content
+        </h1>
     </header>
     <nav>
         <a href = "#">Home</a>
@@ -20,9 +22,11 @@
     </nav>
     <main>
         <h1>Main Content</h1>
-        <aside>
-            <h2>Aside Content</h2>
+        
     </main>
+    <aside>
+            <h2>Aside Content</h2>
+    </aside>
     <footer>
         Footer Content
     </footer>
