--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <h1> 
+        <h3> 
             Header Content
-        </h1>
+        </h3>
     </header>
     <nav>
         <a href = "#">Home</a>
@@ -28,7 +28,9 @@
             <h2>Aside Content</h2>
     </aside>
     <footer>
-        Footer Content
+        <h3>
+            
+        Footer Content</h3>
     </footer>
 </body>
 </html>
