--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -20,13 +20,12 @@
         <a href = "#">Services</a>
         <a href = "#">Contact Us</a>
     </nav>
-    <div class = "container">
     
-    <main>
+    <main class = "container">
         <h3>Main Content</h1>
         
     </main>
-    <aside>
+    <aside class = "container">
             <h3>Aside Content</h3>
     </aside>
     </div>
