--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             About Me
         </h1>
         <p>Hello there, I'm Saviour Edethu, an individual deeply committed to the realm of technology. My fondness for this ever-evolving field developed during my youth, kindled by the promise of streamlining work through innovation. With an insatiable curiosity and tenacious spirit, I have delved into various facets of technology, including artificial intelligence and robotics, eager to explore and expand the boundaries of what is possible. My analytical mind and problem-solving skills are continuously being honed through each new endeavor, pushing me to tackle novel challenges in this captivating domain.</p>
-        <img alt = "Myself" src = "images/alx.jpeg">
+        <img id = "first" alt = "Myself" src = "images/alx.jpeg">
 
         <br/>
         <h2>
