--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Saviour Edethu - WDD 131 - Dynamic Web Fundamentals</title>
+    <meta author = "Saviour Edethu" desription = "This is a website about Saviour Edethu for  WDD 131 - Dynamic Web Fundamentals">
     <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/saviour-edethu-683a69257?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn Profile</a></li>
-                <li><a href="https://byui.instructure.com/">I-Learn</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Favorite Scripture</a></li>
-                <li><a href="#">Final Project</a></li>
-            </ul>
+                <a href="https://www.linkedin.com/in/saviour-edethu-683a69257?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn Profile</a>
+        <a href="https://byui.instructure.com/">I-Learn</a>
+        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Favorite Scripture</a>
+            <a href="#">Final Project</a>
+            
         </nav>
     </header>
 
