--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <section class="card">
+        <section >
             <h1 class="in">About Me</h1>
             <p class="in">Hello there, I'm Saviour Edethu, an individual deeply committed to the realm of technology. My fondness for this ever-evolving field developed during my youth, kindled by the promise of streamlining work through innovation. With an insatiable curiosity and tenacious spirit, I have delved into various facets of technology, including artificial intelligence and robotics, eager to explore and expand the boundaries of what is possible. My analytical mind and problem-solving skills are continuously being honed through each new endeavor, pushing me to tackle novel challenges in this captivating domain.</p>
             <img id="first" alt="Myself" src="images/me.jpeg">
