--- a/index.html
+++ b/index.html
@@ -21,27 +21,32 @@
 
     <main class = "card">
         <div class = "container" >
+           <img id="first" alt="Myself" src="images/me.jpeg">
             <h1 class="in">About Me</h1>
             <p class="in">Hello there, I'm Saviour Edethu, an individual deeply committed to the realm of technology. My fondness for this ever-evolving field developed during my youth, kindled by the promise of streamlining work through innovation. With an insatiable curiosity and tenacious spirit, I have delved into various facets of technology, including artificial intelligence and robotics, eager to explore and expand the boundaries of what is possible. My analytical mind and problem-solving skills are continuously being honed through each new endeavor, pushing me to tackle novel challenges in this captivating domain.</p>
-            <img id="first" alt="Myself" src="images/me.jpeg">
+         
         </div>
 
         <div class = "container" >
-            <h2 class="out">Akwa Ibom, Nigeria</h2>
+            
             <hr>
-            <img alt="Akwa Ibom" src="images/aks.jpeg">
+            <h2 class="out">Akwa Ibom, Nigeria</h2>
+            <img alt="Akwa Ibom" src="images/ibom.jpeg">
 
             <p class="out">Akwa Ibom State is a beautiful state located in the southeastern region of Nigeria, rich in culture, history, and natural resources. Known for its vibrant people and picturesque landscapes, the state boasts a diverse population, including the Ibibio, Annang, Efik, and Oron ethnic groups. Akwa Ibom is also a hub for the oil and gas industry, with vast reserves of crude oil and natural gas. In terms of culture, Akwa Ibom State is renowned for its unique traditional festivals and dances, such as the Ekpe, Ibom, and Afan festivals, as well as its distinctive food and cuisine, characterized by dishes like Afang soup, Edikang Ikong, and Fufu.</p>
         </div>
     </main>
 
-    <aside>
-        <section class="card">
-            <p><a href="https://www.w3schools.com/">W3Schools</a></p>
-            <p><a href="https://techcrunch.com/">TechCrunch</a></p>
-            <p><a href="https://www.theverge.com/">The Verge</a></p>
-            <p><a href="https://www.techradar.com/">TechRadar</a></p>
-        </section>
+    <aside class="card">
+
+       <ul>
+           <li>
+       <a href="https://www.w3schools.com/">W3Schools</a></li>
+       <li><a href="https://techcrunch.com/">TechCrunch</a></li>
+       <li><a href="https://www.theverge.com/">The Verge</a></li>
+           <li><a href="https://www.techradar.com/">TechRadar</a></li>
+       </ul>
+
     </aside>
 
     <footer>
