--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             
             <h2 class="out">Akwa Ibom, Nigeria</h2>
             <br/>
-            <!-- <hr/> -->
-            <!-- <br/> -->
+            <hr/>
+     <img id ="second" alt="Akwa Ibom" src="images/ibom.jpeg">
 
             
             <p class="in">Akwa Ibom State is a beautiful state located in the southeastern region of Nigeria, rich in culture, history, and natural resources. Known for its vibrant people and picturesque landscapes, the state boasts a diverse population, including the Ibibio, Annang, Efik, and Oron ethnic groups. Akwa Ibom is also a hub for the oil and gas industry, with vast reserves of crude oil and natural gas. In terms of culture, Akwa Ibom State is renowned for its unique traditional festivals and dances, such as the Ekpe, Ibom, and Afan festivals, as well as its distinctive food and cuisine, characterized by dishes like Afang soup, Edikang Ikong, and Fufu.</p>
-                        <img alt="Akwa Ibom" src="images/me.jpeg">
+
 
         </section>
     </main>
