--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Saviour Edethu - WDD 131 - Dynamic Web Fundamentals</title>
     <meta author = "Saviour Edethu" desription = "This is a website about Saviour Edethu for  WDD 131 - Dynamic Web Fundamentals">
     <link rel="stylesheet" href="styles/base.css">
+    <script src="getdates.js" defer></script>
 </head>
 <body>
     <header>
