--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Saviour Edethu - WDD 131 - Dynamic Web Fundamentals</title>
-    <meta author = "Saviour Edethu" desription = "This is a website about Saviour Edethu for  WDD 131 - Dynamic Web Fundamentals">
+    <meta name = "author" content = "Saviour Edethu" >
+    <meta name ="description" content = "This is a website about Saviour Edethu for  WDD 131 - Dynamic Web Fundamentals">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/base.css">
-    <script src="getdates.js" defer></script>
+    <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
     <header>
