Update index.html done

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </aside>
 
     <footer>
-        <p>copright &copy; <span id="currentyear"></span> Saviour Edethu, Nigeria</p>
+        <p>copyright &copy; <span id="currentyear"></span> Saviour Edethu, Nigeria</p>
         <p id="lastModified"></p>
     </footer>
 </body>
