--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Saviour Edethu - WDD 131 - Dynamic Web Fundamentals</title>
-    <meta name = "author" content = "Saviour Edethu" >
-    <meta name ="description" content = "This is a website about Saviour Edethu for  WDD 131 - Dynamic Web Fundamentals">
+    <meta name = "author" content = "Saviour Emmanuel Edethu" >
+    <meta name ="description" content = "WDD 131 - Dynamic Web Fundamentals - Saviour Emmanuel Edethu -This  website is about Saviour Edethu fo">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
