--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Saviour Edethu - WDD 131 - Dynamic Web Fundamentals</title>
     <meta name = "author" content = "Saviour Emmanuel Edethu" >
-    <meta name ="description" content = "WDD 131 - Dynamic Web Fundamentals - Saviour Emmanuel Edethu -This  website is about Saviour Edethu fo">
+    <meta name ="description" content = "WDD 131 - Dynamic Web Fundamentals - Saviour Emmanuel Edethu -This  website is about Saviour Edethu">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
