--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -26,7 +26,7 @@
             </p>
   </section>
 
-        <section class = "card" >
+        <section class = "no_card" >
             <h2 class="out">Heleman 12:24</h2>
             <br/>       
             <p class="in">
