--- a/temples.html
+++ b/temples.html
@@ -25,10 +25,32 @@
         <h2>Current Selection: Home</h2>
         <section>
             <figure>
-                <img src="path/to/image.jpg" alt="Temple">
-                <figcaption>Temple Name</figcaption>
+                <img src="images/south_jordan_utah.jpeg.jpg" alt="Temple">
+                <figcaption>South_Jordan Utah Temple</figcaption>
             </figure>
             <!-- Add more figures as needed -->
+            <figure>
+                <img src="images/panama_temple.jpeg.jpg" alt="Temple">
+                <figcaption>Panama Temple</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/provo_temple.jpeg.jpg" alt="Temple">
+                <figcaption>Provo Temple</figcaption>
+            </figure>
+
+
+                <figure>
+                <img src="images/oquirrh_temple.jpeg.jpg" alt="Temple">
+                <figcaption>Oquirrh Temple</figcaption>
+            </figure>
+
+                <figure>
+                <img src="images/st george_temple.jpeg.jpg" alt="Temple">
+                <figcaption> St. George Temple</figcaption>
+            </figure>
+                
+            
         </section>
     </main>
     <footer>
