--- a/temples.html
+++ b/temples.html
@@ -46,7 +46,7 @@
             </figure>
 
                 <figure>
-                <img src="images/st george_temple.jpeg" alt="Temple">
+                <img src="images/st. george_temple.jpeg" alt="Temple">
                 <figcaption> St. George Temple</figcaption>
             </figure>
                 
