--- a/temples.html
+++ b/temples.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saviour Edethu - WDD 131 - Dynamic Web Fundamentals</title>
+    <meta name = "author" content = "Saviour Emmanuel Edethu" >
+    <meta name ="description" content = "WDD 131 - Picture Album Assignment">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;" rel="stylesheet">
     <title>Temples</title>
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css" media="screen and (min-width: 768px)">
@@ -54,6 +60,24 @@
                 <img src="images/salt_lake_temple.jpeg" alt="Temple">
                 <figcaption> Salt Lake Temple</figcaption>
             </figure>
+            <figure>
+                <img src="images/urdaneta_philipines.jpeg" alt="Temple">
+                <figcaption>Urdaneta Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/manila_philipines.jpeg" alt="Temple">
+                <figcaption>Manila Temple Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/bacolod_philipines.jpeg" alt="Temple">
+                <figcaption>Bacolod Temple</figcaption>
+            </figure>
+
+
+
+
+
+
         </section>
     </main>
     <footer>
