--- a/temples.html
+++ b/temples.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saviour Edethu - WDD 131 - Dynamic Web Fundamentals</title>
-    <meta name = "author" content = "Saviour Emmanuel Edethu" >
-    <meta name ="description" content = "WDD 131 - Picture Album Assignment">
+    <title>Temple Album</title>
+    <meta name="author" content="Saviour Edethu" >
+    <meta name="description" content="WDD 131 - Picture Album Assignment">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;" rel="stylesheet">
-    <title>Temples</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css" media="screen and (min-width: 768px)">
     <script src="scripts/temples.js" defer></script>
@@ -29,7 +29,7 @@
     </header>
     <main>
         <h2>Current Selection: Home</h2>
-        <section>
+        <div>
             <figure>
                 <img src="images/south_jordan_utah.jpeg" alt="Temple">
                 <figcaption>South_Jordan Utah Temple</figcaption>
@@ -52,7 +52,7 @@
             </figure>
 
                 <figure>
-                <img src="images/st. george_temple.jpeg" alt="Temple">
+                <img src="images/st_george_temple.jpeg" alt="Temple">
                 <figcaption> St. George Temple</figcaption>
             </figure>
                 
@@ -78,7 +78,7 @@
 
 
 
-        </section>
+        </div>
     </main>
     <footer>
         <p>© <span id="year"></span> Your Site Name. Last Updated: <span id="lastModified"></span></p>
