--- a/temples.html
+++ b/temples.html
@@ -17,6 +17,11 @@
 <body>
     <header>
         <h1>Temples</h1>
+        <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
