--- a/temples.html
+++ b/temples.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <h2>Current Selection: Home</h2>
+        <h2> Home</h2>
         <div>
             <figure>
                 <img src="images/south_jordan_utah.jpeg" alt="Temple">
