--- a/temples.html
+++ b/temples.html
@@ -86,7 +86,7 @@
         </div>
     </main>
     <footer>
-        <p>© <span id="year"></span> Your Site Name. Last Updated: <span id="lastModified"></span></p>
+        <p>© <span id="year"></span> Saviour Emmanuel Edethu - Nigeria. Last Updated: <span id="lastModified"></span></p>
     </footer>
 </body>
 </html>
