--- a/temples.html
+++ b/temples.html
@@ -17,6 +17,11 @@
 <body>
     <header>
         <h1>Temples</h1>
+        <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -29,7 +34,7 @@
     </header>
     <main>
         <h2> Home</h2>
-        <div>
+        <section>
             <figure>
                 <img src="images/south_jordan_utah.jpeg" alt="Temple">
                 <figcaption>South_Jordan Utah Temple</figcaption>
@@ -84,7 +89,7 @@
 
 
 
-        </div>
+        </section>
     </main>
     <footer>
         <p>© <span id="year"></span> Saviour Emmanuel Edethu - Nigeria. Last Updated: <span id="lastModified"></span></p>
