--- a/place.html
+++ b/place.html
@@ -3,30 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Discover Places</title>
+    <meta name="author" content="Saviour Edethu" >
+    <meta name="description" content="WDD 131 - Discover place Assignment">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/place.css">
-    <title>Discover Place</title>
+    <link rel="stylesheet" href="styles/place-large.css" media="screen and (min-width: 768px)">
+    <script src="scripts/place.js" defer></script>
+
 </head>
 <body>
     <header>
         <h1>Discover Japan</h1>
         <picture>
-            <source srcset="img/hero-large.webp" media="(min-width: 800px)">
-            <source srcset="img/hero-small.webp" media="(min-width: 400px)">
-            <img src="img/hero-small.webp" alt="Mount Fuji">
+            <source srcset="img/.japan-large.webp" media="(min-width: 800px)">
+            <source srcset="img/japan.webp" media="(min-width: 400px)">
+            <img src="img/japan.webp" alt="Cities in Japan">
         </picture>
     </header>
     <main>
+        <section class="data">
+            <h2>Data</h2>
+            <p>Area: 10°C</p>
+            <p>Population: 5 km/h</p>
+             <p>Language: 10°C</p>
+            <p>Capital: 5 km/h</p>
+             <p>Currency: 10°C</p>
+            <p>Calling code: 5 km/h</p>
+            <p>Wind Chill: <span id="windChill">Calculating...</span></p>
+        </section>
+
         <section class="weather">
             <h2>Weather</h2>
             <p>Temperature: 10°C</p>
             <p>Wind Speed: 5 km/h</p>
             <p>Wind Chill: <span id="windChill">Calculating...</span></p>
         </section>
-        <!-- Additional content -->
+        
     </main>
     <footer>
-        <p>© <span id="year"></span> | Last Modified: <span id="lastModified"></span></p>
+        <p>© <span id="year"></span> | Saviour Emmanuel Edethu | Last Modified: <span id="lastModified"></span></p>
     </footer>
-    <script src="js/script.js" defer></script>
 </body>
 </html>
