--- a/place.html
+++ b/place.html
@@ -19,9 +19,9 @@
     <header>
         <h1>Discover Japan</h1>
         <picture>
-            <source srcset="img/.japan-large.webp" media="(min-width: 800px)">
-            <source srcset="img/japan.webp" media="(min-width: 400px)">
-            <img src="img/japan.webp" alt="Cities in Japan">
+            <source srcset="images/japan-large.webp" media="(min-width: 800px)">
+            <source srcset="images/japan.webp" media="(min-width: 400px)">
+            <img src="images/japan.webp" alt="Cities in Japan">
         </picture>
     </header>
     <main>
