Proceed to images

--- a/place.html
+++ b/place.html
@@ -29,11 +29,11 @@
             <h2>Data</h2>
             <p>Area: 10°C</p>
             <p>Population: 5 km/h</p>
-             <p>Language: 10°C</p>
-            <p>Capital: 5 km/h</p>
-             <p>Currency: 10°C</p>
+             <p>Language: Japanese</p>
+            <p>Capital: Tokyo</p>
+             <p>Currency: Won</p>
             <p>Calling code: 5 km/h</p>
-            <p>Wind Chill: <span id="windChill">Calculating...</span></p>
+            <p>Timezone: UTC+9</p>
         </section>
 
         <section class="weather">
