--- a/place.html
+++ b/place.html
@@ -37,7 +37,7 @@
         </section>
 
         <section class="weather">
-            <h2>Weather</h2>
+            <h2>Weather</h2><span class="weath"></span>
             <p>Temperature: 10°C</p>
             <p>Wind Speed: 5 km/h</p>
             <p>Wind Chill: <span id="windChill">Calculating...</span></p>
