--- a/place.html
+++ b/place.html
@@ -27,17 +27,17 @@
     <main>
         <section class="data">
             <h2>Data</h2>
-            <p>Area: 10°C</p>
-            <p>Population: 5 km/h</p>
+            <p>Area: 145,869 sq. mi/377,800 sq. km</p>
+            <p>Population: 125.12 million</p>
              <p>Language: Japanese</p>
             <p>Capital: Tokyo</p>
-             <p>Currency: Won</p>
-            <p>Calling code: 5 km/h</p>
+             <p>Currency: Japanese yen</p>
+            <p>Calling code: +81</p>
             <p>Timezone: UTC+9</p>
         </section>
 
         <section class="weather">
-            <h2>Weather</h2><span class="weath"></span>
+            <h2>Weather <span class="weath"></span></h2>
             <p>Temperature: 10°C</p>
             <p>Wind Speed: 5 km/h</p>
             <p>Wind Chill: <span id="windChill">Calculating...</span></p>
