--- a/place.html
+++ b/place.html
@@ -37,7 +37,7 @@
         </section>
 
         <section class="weather">
-            <h2>Weather <span class="weath"></span></h2>
+            <h2>Weather <span class="weath"><img src="images/weather.svg" alt="Weather Icon"></span></h2>
             <p>Temperature: 10°C</p>
             <p>Wind Speed: 5 km/h</p>
             <p>Wind Chill: <span id="windChill">Calculating...</span></p>
