--- a/place.html
+++ b/place.html
@@ -19,7 +19,7 @@
     <header>
         <h1>Discover Japan</h1>
         <picture>
-            <source srcset="images/japan-large.webp" media="(min-width: 400px)">
+            <source srcset="images/japan.webp" media="(min-width: 400px)">
             <source srcset="images/japan.webp" media="(min-width: 200px)">
             <img src="images/japan.webp" alt="Cities in Japan">
         </picture>
