--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -35,6 +35,7 @@
         </nav>
     </header>
     <main>
+        <h2>Home</h2>
         <div id="temple-container">
              
         </div>
