--- a/form.html
+++ b/form.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Saviour Edethu">
+    <meta name="description" content="WDD 131 - Form Assignment">
     <title>Product Review</title>
     <link rel="stylesheet" href="styles/form.css">
 </head>
@@ -68,8 +70,8 @@
         </form>
     </div>
     <footer>
-        <p>&copy;2024 &#127800; Rubia Magdalena Francesco &#127800; Madagascar</p>
-        <p>Last Modification: 02/26/2024 13:56:10</p>
+        <p>© <span id="year"></span> Saviour Emmanuel Edethu - Nigeria. Last Updated: <span id="lastModified"></span></p>
+
     </footer>
     <script src="scripts/form.js"></script>
 </body>
