--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>SimpleShop - Home</title>
-		<link rel="stylesheet" href="project_porfolio/styles/commerce.css">
+		<link rel="stylesheet" href="styles/commerce.css">
 </head>
 <body>
 		<header>
@@ -19,33 +19,51 @@
 		</header>
 
 		<main>
-				<section class="slider">
-						<img src="image1.jpg" alt="Special Offer 1" />
-						<img src="image2.jpg" alt="Special Offer 2" />
-						<img src="image3.jpg" alt="Special Offer 3" />
-				</section>
 
 				<section class="products">
 						<h2>Latest Products</h2>
 						<div class="product-list">
 								<div class="product-item">
-										<img data-src="product1.jpg" alt="Product 1" class="lazy">
+										<img src="images/h.jpeg" alt="Product 1" class="lazy">
 										<h3>Product 1</h3>
 										<p>$10.00</p>
 										<button class="add-to-cart" data-product="Product 1">Add to Cart</button>
 								</div>
 								<div class="product-item">
-										<img data-src="product2.jpg" alt="Product 2" class="lazy">
+										<img src="images/b.webp" alt="Product 2" class="lazy">
 										<h3>Product 2</h3>
 										<p>$15.00</p>
 										<button class="add-to-cart" data-product="Product 2">Add to Cart</button>
 								</div>
 								<div class="product-item">
-										<img data-src="product3.jpg" alt="Product 3" class="lazy">
+										<img src="images/f.jpeg" alt="Product 3" class="lazy">
 										<h3>Product 3</h3>
 										<p>$20.00</p>
 										<button class="add-to-cart" data-product="Product 3">Add to Cart</button>
 								</div>
+
+
+							<div class="product-item">
+									<img src="images/a.webp" alt="Product 4" class="lazy">
+									<h3>Product 4</h3>
+									<p>$15.00</p>
+									<button class="add-to-cart" data-product="Product 4">Add to Cart</button>
+							</div>
+
+							<div class="product-item">
+									<img src="images/i.webp" alt="Product " class="lazy">
+									<h3>Product 5</h3>
+									<p>$15.00</p>
+									<button class="add-to-cart" data-product="Product 5">Add to Cart</button>
+							</div>
+
+							<div class="product-item">
+									<img src="images/R.jpeg" alt="Product 2" class="lazy">
+									<h3>Product 6</h3>
+									<p>$15.00</p>
+									<button class="add-to-cart" data-product="Product 2">Add to Cart</button>
+							</div>
+
 						</div>
 				</section>
 		</main>
@@ -54,6 +72,6 @@
 				<p><a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="attributions.html">Attributions</a></p>
 		</footer>
 
-		<script src="scripts.js"></script>
+		<script src="scripts/commerce.js"></script>
 </body>
 </html>
