--- a/project/product.html
+++ b/project/product.html
@@ -3,8 +3,8 @@
 <head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>SimpleShop - Contact</title>
-		<link rel="stylesheet" href="project_porfolio/styles/commerce.css">
+		<title>SimpleShop - Product</title>
+		<link rel="stylesheet" href="styles/commerce.css">
 </head>
 <body>
 		<header>
@@ -19,20 +19,12 @@
 		</header>
 
 		<main>
-				<section class="contact-form">
-						<h2>Contact Us</h2>
-						<form id="contactForm">
-								<label for="name">Name:</label>
-								<input type="text" id="name" name="name" required>
-
-								<label for="email">Email:</label>
-								<input type="email" id="email" name="email" required>
-
-								<label for="message">Message:</label>
-								<textarea id="message" name="message" required></textarea>
-
-								<button type="submit">Submit</button>
-						</form>
+				<section class="product-details">
+						<img data-src="product1.jpg" alt="Product 1" class="lazy">
+						<h2>Product 1</h2>
+						<p>$10.00</p>
+						<p>This is a detailed description of Product 1.</p>
+						<button class="add-to-cart" data-product="Product 1">Add to Cart</button>
 				</section>
 		</main>
 
