--- a/project/about.html
+++ b/project/about.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>SimpleShop - About Us</title>
-		<link rel="stylesheet" href="project_porfolio/styles/commerce.css">
+		<link rel="stylesheet" href="styles/commerce.css">
 </head>
 <body>
 		<header>
