--- a/project/atrributions.html
+++ b/project/atrributions.html
@@ -40,6 +40,6 @@
 				<p><a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="attributions.html">Attributions</a></p>
 		</footer>
 
-		<script src="scripts.js"></script>
+		<script src="scripts/commerce.js"></script>
 </body>
 </html>
