--- a/project/cart.html
+++ b/project/cart.html
@@ -27,10 +27,10 @@
 				</section>
 		</main>
 
-		<footer>
-				<p><a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="attributions.html">Attributions</a></p>
-		</footer>
-
+	<footer>
+		<p>© <span id="year"></span> Saviour Emmanuel Edethu - Nigeria. Last Updated: <span id="lastModified"></span></p>
+			<p><a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="attributions.html">Attributions</a></p>
+	</footer>
 		<script src="scripts/commerce.js"></script>
 </body>
 </html>
