--- a/project/product.html
+++ b/project/product.html
@@ -20,18 +20,19 @@
 
 		<main>
 				<section class="product-details">
-						<img data-src="product1.jpg" alt="Product 1" class="lazy">
+						<img data-src="images/b.webp" alt="Product 1" class="lazy">
 						<h2>Product 1</h2>
 						<p>$10.00</p>
-						<p>This is a detailed description of Product 1.</p>
+						<p>This is the best Italian shoe that creates a unique appearance in you with a bold step.</p>
 						<button class="add-to-cart" data-product="Product 1">Add to Cart</button>
 				</section>
 		</main>
 
-		<footer>
-				<p><a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="attributions.html">Attributions</a></p>
-		</footer>
+	<footer>
+		<p>© <span id="year"></span> Saviour Emmanuel Edethu - Nigeria. Last Updated: <span id="lastModified"></span></p>
+			<p><a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="attributions.html">Attributions</a></p>
+	</footer>
 
-		<script src="scripts.js"></script>
+		<script src="scripts/commerce.js"></script>
 </body>
 </html>
