--- a/project/contact.html
+++ b/project/contact.html
@@ -35,11 +35,11 @@
 						</form>
 				</section>
 		</main>
+	<footer>
+		<p>© <span id="year"></span> Saviour Emmanuel Edethu - Nigeria. Last Updated: <span id="lastModified"></span></p>
+			<p><a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="attributions.html">Attributions</a></p>
+	</footer>
 
-		<footer>
-				<p><a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="attributions.html">Attributions</a></p>
-		</footer>
-
-		<script src="scripts.js"></script>
+		<script src="scripts/commerce.js"></script>
 </body>
 </html>
