--- a/project/index.html
+++ b/project/index.html
@@ -24,41 +24,41 @@
 						<h2>Latest Products</h2>
 						<div class="product-list">
 								<div class="product-item">
-										<img src="images/h.jpeg" alt="Product 1" class="lazy">
+										<img data-src="images/h.jpeg" alt="Product 1" class="lazy">
 										<h3>Product 1</h3>
 										<p>$10.00</p>
 										<button class="add-to-cart" data-product="Product 1">Add to Cart</button>
 								</div>
 								<div class="product-item">
-										<img src="images/b.webp" alt="Product 2" class="lazy">
+										<img data-src="images/b.webp" alt="Product 2" class="lazy">
 										<h3>Product 2</h3>
 										<p>$15.00</p>
 										<button class="add-to-cart" data-product="Product 2">Add to Cart</button>
 								</div>
-								<div class="product-item">
-										<img src="images/f.jpeg" alt="Product 3" class="lazy">
-										<h3>Product 3</h3>
-										<p>$20.00</p>
-										<button class="add-to-cart" data-product="Product 3">Add to Cart</button>
-								</div>
+							<div class="product-item">
+									<img data-src="images/c.jpeg" alt="Product 4" class="lazy">
+									<h3>Product 3</h3>
+									<p>$15.00</p>
+									<button class="add-to-cart" data-product="Product 4">Add to Cart</button>
+							</div>
 
 
 							<div class="product-item">
-									<img src="images/a.webp" alt="Product 4" class="lazy">
+									<img data-src="images/a.webp" alt="Product 4" class="lazy">
 									<h3>Product 4</h3>
 									<p>$15.00</p>
 									<button class="add-to-cart" data-product="Product 4">Add to Cart</button>
 							</div>
 
 							<div class="product-item">
-									<img src="images/i.webp" alt="Product " class="lazy">
+									<img data-src="images/i.webp" alt="Product " class="lazy">
 									<h3>Product 5</h3>
 									<p>$15.00</p>
 									<button class="add-to-cart" data-product="Product 5">Add to Cart</button>
 							</div>
 
 							<div class="product-item">
-									<img src="images/R.jpeg" alt="Product 2" class="lazy">
+									<img data-src="images/R.jpeg" alt="Product 2" class="lazy">
 									<h3>Product 6</h3>
 									<p>$15.00</p>
 									<button class="add-to-cart" data-product="Product 2">Add to Cart</button>
@@ -69,6 +69,7 @@
 		</main>
 
 		<footer>
+			<p>© <span id="year"></span> Saviour Emmanuel Edethu - Nigeria. Last Updated: <span id="lastModified"></span></p>
 				<p><a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="attributions.html">Attributions</a></p>
 		</footer>
 
